--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 #################
 ## Eclipse
 #################
-/fuel/application/cache
+/fuel/application/config/database.php
+/fuel/application/cache/
 .svn
 *.pydevproject
 .project
