--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 #################
 /fuel/application/config/database.php
 /fuel/application/cache/
+/fuel/application/logs/*.php
 .svn
 *.pydevproject
 .project
