--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 ## Eclipse
 #################
 fuel/application/config/database.php
-fuel/application/cache/
+fuel/application/cache/*
 fuel/application/logs/*.php
 .svn
 *.pydevproject
